# diplomacy

./: .gitignore  CMakeLists.txt
godot/: Diplomacy.csproj  Diplomacy.sln  World.tscn  project.godot
godot/Properties/: AssemblyInfo.cs
godot/World/: Map.cs  World.cs
src/: Common.h  Game.cpp  Game.h  GameState.cpp  GameState.h  Main.cpp  MainGameState.cpp  MainGameState.h  Map.cpp  Map.h  MenuGameState.cpp  MenuGameState.h  Player.cpp  RenderContext.h  State.cpp  State.h  World.cpp  World.h
src/gameplay/: Orders.cpp  Orders.h  Squad.cpp  Squad.h  Tank.cpp  Tank.h  Unit.cpp  Unit.h
src/gui/: imconfig.h  imgui-SFML.cpp
src/math/: Noise.cpp
src/math/voronoi/: voronoi.cpp  voronoi.h
src/noise/: Noise.cpp  Noise.h
src/player/: Controller.cpp  Controller.h  LocalController.cpp  LocalController.h  Player.cpp  Player.h
src/voronoi/: voronoi.cpp  voronoi.h
src/world/: Map.cpp  Map.h  State.cpp  State.h  World.cpp  World.h
